--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <h1>Välkomen till testsidan</h1>
 <h2>From Shahriar</h2>
-<h3>George was here</h3>
+<h3>George here and Shahriar too</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, iste.</p>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto excepturi, accusamus tenetur deleniti soluta possimus. Nulla totam ut enim accusantium beatae quas incidunt quibusdam quisquam accusamus. Nam quae delectus vel.
 Asperiores, dicta! Veniam rem laborum minus autem illum, nesciunt odit esse dignissimos est veritatis. Excepturi veritatis quae laudantium beatae, maiores asperiores reprehenderit tempora, sit, consequatur repudiandae id? Provident, accusamus libero!
