--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@ Asperiores, dicta! Veniam rem laborum minus autem illum, nesciunt odit esse dign
 Quae dolorem nesciunt accusantium sapiente mollitia ullam officiis tempore fugit optio a, animi, laborum aliquid! 
 <p><strong>Det är väldigt fint väder idag</strong></p>
 Aut, debitis at! Minima tempora cupiditate id recusandae assumenda ex cum, fugiat et aliquid possimus?
-Consectetur sint obcaecati expedita eligendi, <strong>ducimus quasi ipsum officia cum magni illo harum magnam commodi numquam nisi, facilis odio officiis tenetur eaque perferendis veritatis iusto! Labore nesciunt voluptate exercitationem laborum!
+, <strong>ducimus quasi ipsum officia cum magni illo harum magnam commodi numquam nisi, facilis odio officiis tenetur eaque perferendis veritatis iusto! Labore nesciunt voluptate exercitationem laborum!
 Beatae ipsum suscipit esse. Nisi dignissimos debitis nulla, et error ratione doloribus aperiam ad optio labore libero iste repellat nesciunt excepturi perspiciatis, eius, ipsa culpa autem rem doloremque in. Consequuntur.</strong></p>
+
 <script src=""></script>
 </body>
 </html>
