--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Quae dolorem nesciunt accusantium sapiente mollitia ullam officiis tempore fugit
 
 <p>hej på dig</p>
 Aut, debitis at! Minima tempora cupiditate id recusandae assumenda ex cum, fugiat et aliquid possimus?
-, <strong>ducimus quasi ipsum officia cum magni illo harum magnam commodi numquam nisi, facilis odio officiis tenetur eaque perferendis veritatis iusto! Labore nesciunt voluptate exercitationem laborum!
+<p>jag vill ha kvar texten</p>, <strong>ducimus quasi ipsum officia cum magni illo harum magnam commodi numquam nisi, facilis odio officiis tenetur eaque perferendis veritatis iusto! Labore nesciunt voluptate exercitationem laborum!
 Beatae ipsum suscipit esse. Nisi dignissimos debitis nulla, et error ratione doloribus aperiam ad optio labore libero iste repellat nesciunt excepturi perspiciatis, eius, ipsa culpa autem rem doloremque in. Consequuntur.</strong></p>
 
 <script src=""></script>
